tests/baselines/reference/contextualTypingOfConditionalExpression2.errors.txt
==== tests/cases/compiler/contextualTypingOfConditionalExpression2.ts (1 errors) ====
    class A {
        foo: number;
    }
    class B extends A {
        bar: number;
    }
    class C extends A {
        baz: number;
    }
    
    var x2: (a: A) => void = true ? (a: C) => a.foo : (b: number) => { };
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2227: Type of conditional '{}' must be identical to '(a: C) => number', '(b: number) => void' or '(a: A) => void'.
    